--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  json_annotation: ^2.4.0
+  rxdart: ^0.22.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^1.6.3
+  json_serializable: ^3.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
