--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   json_annotation: ^2.4.0
   rxdart: ^0.22.1
+  cached_network_image: ^1.0.0
 
 dev_dependencies:
   flutter_test:
