--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ flutter:
    - static/images/bg_main.png
    - static/images/bg_search.png
    - static/images/icon_back.png
+   - static/images/defalut_img.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
